@@ -27,13 +27,13 @@ import no.nav.melosys.service.dokument.brev.BrevbestillingRequest;
 import org.junit.jupiter.api.Test;
 
 import static no.nav.melosys.service.dokument.brev.BrevDataTestUtils.lagStrukturertAdresse;
-import static no.nav.melosys.service.dokument.brev.mapper.A1MapperTest.lagPersonDokument;
 import static no.nav.melosys.service.dokument.brev.mapper.BrevMappingTestUtils.lagFellesType;
 import static no.nav.melosys.service.dokument.brev.mapper.BrevMappingTestUtils.lagNAVFelles;
 import static no.nav.melosys.service.dokument.brev.mapper.felles.FellesBrevtypeMappingTest.hentAlleVerdierFraKodeverk;
+import static no.nav.melosys.service.persondata.PersonopplysningerObjectFactory.lagPersonopplysninger;
 import static org.assertj.core.api.Assertions.assertThat;
 
-public class InnvilgelsesbrevFlereLandMapperTest {
+class InnvilgelsesbrevFlereLandMapperTest {
     private final InnvilgelsesbrevFlereLandMapper instans;
 
     public InnvilgelsesbrevFlereLandMapperTest() {
@@ -41,7 +41,7 @@ public class InnvilgelsesbrevFlereLandMapperTest {
     }
 
     @Test
-    public void testSakstypeKode() throws Exception {
+    void testSakstypeKode() throws Exception {
         List<String> koderSomIkkeErAktuelleForBrev = Collections.singletonList(
             "UKJENT" // Det er ikke aktuelt med brev for denne
         );
@@ -52,7 +52,7 @@ public class InnvilgelsesbrevFlereLandMapperTest {
     }
 
     @Test
-    public void mapTilBrevXmlGirIkkeTomXmlStreng() throws Exception {
+    void mapTilBrevXmlGirIkkeTomXmlStreng() throws Exception {
         testMapTilBrevXml(lagBehandling(lagFagsak()), lagBehandlingsresultat(Collections.singleton(lagLovvalgsperiode())));
     }
 
@@ -66,7 +66,7 @@ public class InnvilgelsesbrevFlereLandMapperTest {
     }
 
     private BrevDataInnvilgelseFlereLand lagBrevdataInnvilgelse() {
-        List<AvklartVirksomhet> norskeVirksomheter = Collections.singletonList(new AvklartVirksomhet("Telenor","1234", lagStrukturertAdresse(), Yrkesaktivitetstyper.LOENNET_ARBEID));
+        List<AvklartVirksomhet> norskeVirksomheter = Collections.singletonList(new AvklartVirksomhet("Telenor", "1234", lagStrukturertAdresse(), Yrkesaktivitetstyper.LOENNET_ARBEID));
 
         BrevDataInnvilgelseFlereLand brevdataInnvilgelse = new BrevDataInnvilgelseFlereLand(new BrevbestillingRequest(), "SAKSBEHANDLER");
         brevdataInnvilgelse.lovvalgsperiode = lagLovvalgsperiode();
@@ -75,7 +75,7 @@ public class InnvilgelsesbrevFlereLandMapperTest {
         brevdataInnvilgelse.arbeidsgivere = norskeVirksomheter;
         brevdataInnvilgelse.bostedsland = "Norge";
         brevdataInnvilgelse.trydemyndighetsland = Landkoder.DE;
-        brevdataInnvilgelse.alleArbeidsland = Collections.singletonList("Sverige");
+        brevdataInnvilgelse.alleArbeidsland = List.of("Sverige", "Danmark", "Finland", "Spania");
         brevdataInnvilgelse.erMarginaltArbeid = true;
         brevdataInnvilgelse.erBegrensetPeriode = true;
         brevdataInnvilgelse.vedleggA1 = lagBrevdataA1(norskeVirksomheter);
@@ -84,7 +84,7 @@ public class InnvilgelsesbrevFlereLandMapperTest {
 
     private static BrevDataA1 lagBrevdataA1(List<AvklartVirksomhet> virksomheter) {
         BrevDataA1 brevdataA1 = new BrevDataA1();
-        brevdataA1.person = lagPersonDokument();
+        brevdataA1.person = lagPersonopplysninger();
         brevdataA1.bostedsadresse = lagStrukturertAdresse();
         brevdataA1.yrkesgruppe = Yrkesgrupper.ORDINAER;
         brevdataA1.hovedvirksomhet = virksomheter.get(0);
